@@ -1,6 +1,7 @@
 package ya.hw.taskmanagerapp.manager.impl;
 
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import ya.hw.taskmanagerapp.manager.HistoryManager;
 import ya.hw.taskmanagerapp.manager.Managers;
@@ -14,56 +15,42 @@ import static org.junit.jupiter.api.Assertions.*;
 public class InMemoryHistoryManagerTest {
 
     private HistoryManager historyManager;
-    private Task task;
+    private Task task, task2;
 
     @BeforeEach
     void setUp() {
         historyManager = Managers.getDefaultHistory();
         task = new Task(1, "Task", "Desc", TaskStatus.NEW);
+        task2 = new Task(2, "Task 2", "Description", TaskStatus.NEW);
     }
+
     @Test
+    @DisplayName("Добавление задачи должно сохранять её в истории просмотров")
     void add_addsTaskToHistory() {
         historyManager.add(task);
         List<Task> history = historyManager.getHistory();
         assertFalse(historyManager.getHistory().isEmpty(), "Проверяем добавление в историю");
-        assertEquals(task, history.get(0), "В истории должна быть добавленная задача");
+        assertEquals(task, history.getFirst(), "В истории должна быть добавленная задача");
     }
 
     @Test
+    @DisplayName("История просмотров должна быть пустой при инициализации")
     void getHistory_returnsEmptyListInitially() {
         assertTrue(historyManager.getHistory().isEmpty(), "Проверяем пустую историю при инициализации");
     }
 
     @Test
-    void add_limitsHistoryTo10Tasks() {
-        for (int i = 1; i <= 10; i++) {
-            Task task = new Task(i, "Task " + i, "Desc", TaskStatus.NEW);
-            historyManager.add(task);
-        }
-
-        assertEquals(10, historyManager.getHistory().size());
-
-        Task extraTask = new Task(11, "Extra", "Desc", TaskStatus.NEW);
-        historyManager.add(extraTask);
-        List<Task> history = historyManager.getHistory();
-
-        assertEquals(10, history.size(), "Проверяем ограничение истории 10 задачами");
-        assertFalse(history.contains(new Task(1, "Task 1", "Desc", TaskStatus.NEW)),
-                "Первая задача должна быть удалена");
-        assertTrue(history.contains(new Task(11, "Task 11", "Desc", TaskStatus.NEW)),
-                "Новая задача должна быть в истории");
-    }
-
-    @Test
+    @DisplayName("Повторное добавление одной задачи не должно создавать дубликатов в истории")
     void add_keepsDuplicateTasks() {
         historyManager.add(task);
         historyManager.add(task);
 
-        assertEquals(2, historyManager.getHistory().size(),
-                "При дублировании вызовов история должна сохранять все записи");
+        assertEquals(1, historyManager.getHistory().size(),
+                "При дублировании вызовов история НЕ должна сохранять одинаковые записи");
     }
 
     @Test
+    @DisplayName("История просмотров должна сохранять порядок добавления задач (FIFO)")
     void getHistory_returnsTasksInFIFOOrder() {
         Task task1 = new Task(1, "Task1", "", TaskStatus.NEW);
         Task task2 = new Task(2, "Task2", "", TaskStatus.NEW);
@@ -77,9 +64,18 @@ public class InMemoryHistoryManagerTest {
     }
 
     @Test
+    @DisplayName("Добавление null-задачи не должно влиять на историю просмотров")
     void add_nullTask_shouldNotFail() {
         historyManager.add(null);
         assertTrue(historyManager.getHistory().isEmpty(),
                 "Добавление null не должно влиять на историю");
+    }
+
+    @Test
+    void remove_TaskFromHistory() {
+        historyManager.add(task);
+        historyManager.add(task2);
+        historyManager.remove(task.getId());
+        assertEquals(List.of(task2), historyManager.getHistory());
     }
 }
